@@ -39,7 +39,8 @@
         <div class="hero">
             <label>
                 <input type="checkbox" name="destination.{{id}}" checked>
-                <img class="token" src="{{{prototypeToken.texture.src}}}"> {{name}}
+                <img class="token" src="{{{prototypeToken.texture.src}}}">
+                <span class="name">{{name}}</span> 
             </label>
         </div>
 
